--- a/styles/studentArea.css
+++ b/styles/studentArea.css
@@ -4,8 +4,16 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
+
+:root{
+  --dark-mode-body:#2b2b2b;
+  --dark-mode-items:#181818;
+  --default-mode: rgb(224, 224, 224);
+}
+
 body {
-  background-color: #a892ce;
+  background-color: var(--dark-mode-body) ;
+  overflow-x: hidden;
 }
 
 header {
@@ -13,29 +21,19 @@ header {
   box-shadow: 0px 5px 0px #acacac, 0px 0px 0px #ffffff;
   width: 100%;
   height: 60px;
-  background-color: #fff;
   display: flex;
   justify-content: space-between;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   align-items: center;
   flex-direction: row;
   flex-wrap: nowrap;
   flex-shrink: 1;
-  position: relative;
+  position:sticky;
+  top: 0;
   letter-spacing: 1px;
   font-weight: bold;
   user-select: none;
-}
-
-main {
-  padding-top: 40px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: 1px;
-  font-weight: bold;
 }
 
 #area-user {
@@ -49,6 +47,11 @@ main {
   flex-wrap: nowrap;
   user-select: none;
 }
+
+#area-user #user-name{
+  padding-right: 5px;
+}
+
 
 #area-user #exit {
   width: 40px;
@@ -72,12 +75,13 @@ main {
   background-color: #fff;
   position: absolute;
   top: 58px;
-  right: 1px;
+  right: 0px;
   border-bottom: 2px solid gray;
   border-radius: 5px;
   cursor: pointer;
   user-select: none;
 }
+
 .message-exit:hover {
   background-color: #e9e9e9;
   box-shadow: 1px 1px #acacac;
@@ -103,6 +107,108 @@ main {
 .active {
   display: flex;
 }
-#container {
-  display: grid;
+
+main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+main h2 {
+  letter-spacing: 5px;
+  font-weight: bold;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+#initialData {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+#turma {
+  height: 80%;
+  width: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  border: 3px solid #acacac;
+  border-radius: 50px;
+}
+#turma h3,
+h4 {
+  letter-spacing: 3px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+#name {
+  height: 80%;
+  width: auto;
+  padding: 20px;
+  background-color: white;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #acacac;
+  border-radius: 50px;
+}
+
+#name h3 {
+  letter-spacing: 3px;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+#studentPhoto {
+  height: 100%;
+  width: 200px;
+  background-color: orange;
+  border: 3px solid #acacac;
+  border-radius: 50%;
+}
+
+
+#studentPerformance {
+  width: 100%;
+  height: 500px;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-shrink: 1;
+  flex-direction: row;
+}
+
+#media, #absences, #occurrences, #finalStatistics{
+  height: 100%;
+  width: 400px;
+  background-color:#b6b6b6;
+  border-radius: 20px;
+  border: 5px solid white;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.table{
+  font-weight: bold;
+  text-transform:capitalize;
+  text-align: center;
+  width: 100%;
+  height: 90%;
+}
+
+.table td, th{
+  border: 3px solid whitesmoke;
+  border-radius: 10px;
 }
