--- a/styles/studentArea.css
+++ b/styles/studentArea.css
@@ -9,12 +9,63 @@
   --dark-mode-body:#2b2b2b;
   --dark-mode-items:#181818;
   --default-mode: rgb(224, 224, 224);
+  --default-color-letter : black;
+  --dark-color-letter : white;
 }
 
 body {
-  background-color: var(--dark-mode-body) ;
+  background-color: var(--default-mode) ;
+  color: var(--default-color-letter);
   overflow-x: hidden;
 }
+
+/* ======================================button-theme==================================== */
+
+
+input[type=checkbox]{
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 56px;
+  height: 30px;
+  background: rgb(2, 187, 2);
+  border-radius: 100px;
+  border: 2px solid white;
+  position: fixed;
+  top: 70px;
+  left: 20px;
+}
+
+label::after{
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background-color: var(--color-headings);
+}
+
+input:checked + label::after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 45px;
+}
+/* ======================================button-theme==================================== */
 
 header {
   background: #e0e0e0;
