--- a/styles/login.css
+++ b/styles/login.css
@@ -2,24 +2,24 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
   background-color: #5a3e8e;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
-    flex-wrap: wrap;
-    position: relative;
+  flex-wrap: wrap;
+  position: relative;
 }
 
 #areaLogin {
   display: flex;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   width: 450px;
@@ -29,182 +29,204 @@ body {
   box-shadow: 5px -5px 0px #e3e3e3, -5px 5px 0px #ffffff;
 }
 
-#areaLogin h1, h3, p{
-font-weight: bold;
-letter-spacing: 2px;
-
+#areaLogin h1,
+h3,
+p {
+  font-weight: bold;
+  letter-spacing: 2px;
 }
 
-#areaLogin strong{
-    color: purple;
-    cursor: pointer;
+#areaLogin strong {
+  color: purple;
+  cursor: pointer;
 }
 
-#areaLogin form{
-    width: 60%;
-    height: 100px;
-    display: flex ;
-    flex-direction: column;
-    justify-content: space-around;
+#areaLogin form {
+  width: 60%;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-#areaLogin input{
-    padding: 10px;
-    border-radius: 8px;
-    border: 1px solid gray;
-    outline: none;
+#areaLogin input {
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  outline: none;
 }
 
-#areaLogin button{
-    height: 50px;
-    width: 50%;
-    letter-spacing: 2px;
-    font-weight: bold;
-    border-radius: 10px;
-    border: 1px solid gray;
-    background-color: #b6a0e6;
-    cursor: pointer;
+#areaLogin button {
+  height: 50px;
+  width: 50%;
+  letter-spacing: 2px;
+  font-weight: bold;
+  border-radius: 10px;
+  border: 1px solid gray;
+  background-color: #b6a0e6;
+  cursor: pointer;
 }
 
-#img-background img{
-    width: 100%;
-    height: 100%;
+#img-background img {
+  width: 100%;
+  height: 100%;
+}
+#loginMsgError {
+  position: absolute;
+  top: 0px;
+  background-color: rgb(247, 83, 83);
+  color: white;
+  width: 200px;
+  height: 100px;
+  border-radius: 10px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  border: 4px solid red;
+}
+
+#loginMsgError button {
+  width: 50%;
+  height: 20px;
+  cursor: pointer;
+  border: 1px solid black;
+  background-color: #b6a0e6;
+  border-radius: 5px;
+  font-weight: bold;
 }
 
 /* ========================================registerArea=========================== */
 
-.registerArea{
-position: absolute;
-top: 100px;
-    display: none;
-    justify-content:space-evenly;
-    align-items: center;
-    flex-direction: column;
-    width: 450px;
-    height: 450px;
-    border-radius: 36px;
-    background: linear-gradient(45deg, #e6e6e6, #ffffff);
-    box-shadow: 5px -5px 0px #e3e3e3, -5px 5px 0px #ffffff;
+.registerArea {
+  position: absolute;
+  top: 100px;
+  display: none;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  width: 450px;
+  height: 600px;
+  border-radius: 36px;
+  background: linear-gradient(45deg, #e6e6e6, #ffffff);
+  box-shadow: 5px -5px 0px #e3e3e3, -5px 5px 0px #ffffff;
 }
 
+.registerArea h1,
+p {
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-align: center;
+}
 
-.registerArea h1, p{
-    font-weight: bold;
-    letter-spacing: 2px;
-    text-align: center;
-    }
+.registerArea form {
+  width: 80%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.registerArea input {
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid gray;
+  outline: none;
+  margin: 4px;
+}
+.registerArea button {
+  height: 50px;
+  width: 50%;
+  letter-spacing: 2px;
+  font-weight: bold;
+  border-radius: 10px;
+  border: 1px solid gray;
+  background-color: #b6a0e6;
+  cursor: pointer;
+}
+.msgError {
+  width: auto;
+  height: auto;
+  color: purple;
+}
+.registerArea #voltar {
+  height: 30px;
+  width: 30%;
+}
 
-    .registerArea form{
-        width: 60%;
-        height: 100px;
-        display: flex ;
-        flex-direction: column;
-        justify-content: space-around;
-    }
-    .registerArea input{
-        padding: 10px;
-        border-radius: 8px;
-        border: 1px solid gray;
-        outline: none;
-    }
-    .registerArea button{
-        height: 50px;
-        width: 50%;
-        letter-spacing: 2px;
-        font-weight: bold;
-        border-radius: 10px;
-        border: 1px solid gray;
-        background-color: #b6a0e6;
-        cursor: pointer;
-    }
-
-    .registerArea #voltar{
-        height: 30px;
-        width: 30%;
-    }
-
-
-    .activeRegisterArea{
-        display: flex;
-    }
+.activeRegisterArea {
+  display: flex;
+}
 /* =====================================Hover, active, etcs...============================== */
 
-#areaLogin button:hover{
-    background-color: #8059c7;
-    transition: 0.3s;
+#areaLogin button:hover {
+  background-color: #8059c7;
+  transition: 0.3s;
 }
-#areaLogin button:active{
-    background-color: #5a3e8e;
-    color: white;
+#areaLogin button:active {
+  background-color: #5a3e8e;
+  color: white;
 }
 
-.registerArea button:hover{
-    background-color: #8059c7;
-    transition: 0.3s;
+.registerArea button:hover {
+  background-color: #8059c7;
+  transition: 0.3s;
 }
-.registerArea button:active{
-    background-color: #5a3e8e;
-    color: white;
+.registerArea button:active {
+  background-color: #5a3e8e;
+  color: white;
 }
 
 /* ================================Responsividade=============================== */
 
+@media screen and (max-width: 1500px) {
+  body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #5a3e8e;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  #areaLogin {
+    position: absolute;
+    z-index: 100;
+    width: 480px;
+    height: 480px;
+  }
 
-@media screen and (max-width: 1500px){
+  #areaLogin form {
+    height: 150px;
+  }
 
-    body {
-        width: 100vw;
-        height: 100vh;
-      background-color: #5a3e8e;
-      justify-content: center;
-      align-items: center;
-        flex-wrap: nowrap;
-    }
-    #areaLogin {
-        position: absolute;
-        z-index: 100;
-        width: 480px;
-        height: 480px;
-      }
-      
-      #areaLogin form{
-        height: 150px;
-    }
-    
-    #areaLogin input{
-        padding: 15px;
-    }
-    
-    #areaLogin button{
-        height: 55px;
-    }
+  #areaLogin input {
+    padding: 15px;
+  }
 
-    
+  #areaLogin button {
+    height: 55px;
+  }
 }
 
+@media screen and (max-width: 550px) {
+  #areaLogin {
+    width: 90%;
+    height: 400px;
+  }
 
-@media screen and (max-width: 550px){
-    #areaLogin {
-        width: 90%;
-        height: 400px;
-      } 
+  #areaLogin form {
+    height: 100px;
+  }
 
-      #areaLogin form{
-        height: 100px;
-    }
-    
-    #areaLogin input{
-        padding: 8px;
-    }
-    
-    #areaLogin button{
-        height: 40px;
-    }
+  #areaLogin input {
+    padding: 8px;
+  }
 
+  #areaLogin button {
+    height: 40px;
+  }
 
-
-      #img-background{
-        display: none;
-     }
+  #img-background {
+    display: none;
+  }
 }
-
