--- a/styles/login.css
+++ b/styles/login.css
@@ -99,9 +99,16 @@ p {
 
 /* ========================================registerArea=========================== */
 
+#img-bg-register{
+position: absolute;
+left: 200px;
+display: none;
+}
+
 .registerArea {
   position: absolute;
-  top: 100px;
+  top: 180px;
+  right: 200px;
   display: none;
   justify-content: space-evenly;
   align-items: center;
@@ -113,6 +120,9 @@ p {
   box-shadow: 5px -5px 0px #e3e3e3, -5px 5px 0px #ffffff;
 }
 
+.registerArea strong{
+  color: purple; 
+}
 .registerArea h1,
 p {
   font-weight: bold;
@@ -176,6 +186,7 @@ p {
   background-color: #5a3e8e;
   color: white;
 }
+
 
 /* ================================Responsividade=============================== */
 
