--- a/styles/studentArea.css
+++ b/styles/studentArea.css
@@ -6,16 +6,21 @@
 }
 
 :root{
-  --dark-mode-body:#2b2b2b;
-  --dark-mode-items:#181818;
-  --default-mode: rgb(224, 224, 224);
-  --default-color-letter : black;
-  --dark-color-letter : white;
+  --items-color:#e0e0e0;
+  --background-color: rgb(224, 224, 224);
+  --color-letter : black;
+  
+}
+
+.darkMode{
+  --background-color: #181818;
+  --color-letter : white;
+  --items-color:#2b2b2b;
 }
 
 body {
-  background-color: var(--default-mode) ;
-  color: var(--default-color-letter);
+  background-color: var(--background-color) ;
+  color: var(--color-letter);
   overflow-x: hidden;
 }
 
@@ -68,7 +73,7 @@ label:active:after {
 /* ======================================button-theme==================================== */
 
 header {
-  background: #e0e0e0;
+  background: var(--items-color);
   box-shadow: 0px 5px 0px #acacac, 0px 0px 0px #ffffff;
   width: 100%;
   height: 60px;
@@ -88,10 +93,10 @@ header {
 }
 
 #area-user {
-  width: 200px;
+  width: auto;
   height: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   flex-direction: row;
   flex-shrink: 1;
@@ -123,18 +128,19 @@ header {
   align-items: center;
   width: 100px;
   height: 50px;
-  background-color: #fff;
+  background-color: var(--items-color);
+  color: var(--color-letter);
   position: absolute;
   top: 58px;
   right: 0px;
-  border-bottom: 2px solid gray;
+  border-bottom: 2px solid #acacac ;
   border-radius: 5px;
   cursor: pointer;
   user-select: none;
 }
 
 .message-exit:hover {
-  background-color: #e9e9e9;
+  background-color: var(--background-color);
   box-shadow: 1px 1px #acacac;
   -webkit-transform: translateY(1px);
   transform: translateY(1px);
@@ -189,7 +195,7 @@ main h2 {
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
-  background-color: white;
+  background-color: var(--items-color);
   border: 3px solid #acacac;
   border-radius: 50px;
 }
@@ -204,7 +210,7 @@ h4 {
   height: 80%;
   width: auto;
   padding: 20px;
-  background-color: white;
+  background-color: var(--items-color);
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -221,7 +227,7 @@ h4 {
 #studentPhoto {
   height: 100%;
   width: 200px;
-  background-color: orange;
+  background-color: var(--items-color);
   border: 3px solid #acacac;
   border-radius: 50%;
 }
@@ -241,9 +247,9 @@ h4 {
 #media, #absences, #occurrences, #finalStatistics{
   height: 100%;
   width: 400px;
-  background-color:#b6b6b6;
+  background-color:var(--items-color);
   border-radius: 20px;
-  border: 5px solid white;
+  border: 5px solid #acacac;
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
@@ -260,6 +266,6 @@ h4 {
 }
 
 .table td, th{
-  border: 3px solid whitesmoke;
+  border: 3px solid #acacac;
   border-radius: 10px;
 }
