--- a/styles/dashboardPages.css
+++ b/styles/dashboardPages.css
@@ -33,7 +33,7 @@ input[type=checkbox]{
   visibility: hidden;
 }
 
-label {
+#labelDarkMode {
   cursor: pointer;
   text-indent: -9999px;
   width: 56px;
@@ -46,7 +46,7 @@ label {
   left: 20px;
 }
 
-label::after{
+#labelDarkMode::after{
   content: '';
   position: absolute;
   top: 3px;
@@ -58,16 +58,16 @@ label::after{
   transition: 0.3s;
 }
 
-input:checked + label {
+input:checked + #labelDarkMode {
   background-color: var(--color-headings);
 }
 
-input:checked + label::after {
+input:checked + #labelDarkMode::after {
   left: calc(100% - 5px);
   transform: translateX(-100%);
 }
 
-label:active:after {
+#labelDarkMode:active:after {
   width: 45px;
 }
 /* ======================================button-theme==================================== */
@@ -109,6 +109,7 @@ header {
 }
 
 
+
 #area-user #exit {
   width: 40px;
   height: 40px;
@@ -137,6 +138,7 @@ header {
   border-radius: 5px;
   cursor: pointer;
   user-select: none;
+  flex-wrap: nowrap;
 }
 
 .message-exit:hover {
@@ -167,19 +169,21 @@ header {
 
 main {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
+  text-align: center;
 }
 
-main h2 {
+#titleStudent{
   letter-spacing: 5px;
   font-weight: bold;
-  font-size: 40px;
   text-transform: uppercase;
+  padding-top: 20px;
 }
+
 #initialData {
   width: 100%;
   height: 200px;
@@ -187,46 +191,43 @@ main h2 {
   justify-content: space-around;
   align-items: center;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 #turma {
-  height: 80%;
-  width: 200px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
+  height: auto;
+  width: auto;
+  padding: 20px;
+  text-align: center;
   background-color: var(--items-color);
   border: 3px solid #acacac;
-  border-radius: 50px;
-}
-#turma h3,
-h4 {
-  letter-spacing: 3px;
-  font-size: 30px;
+  border-radius: 20px;
   font-weight: bold;
+}
+#turma h3{
+  letter-spacing: 1px;
 }
 
 #name {
-  height: 80%;
+  height: auto;
   width: auto;
-  padding: 20px;
+  padding: 10px;
   background-color: var(--items-color);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
   border: 3px solid #acacac;
-  border-radius: 50px;
+  border-radius: 20px;
+  font-weight: bold;
 }
 
 #name h3 {
   letter-spacing: 3px;
   font-size: 50px;
-  font-weight: bold;
 }
 
+
+
 #studentPhoto {
-  height: 100%;
-  width: 200px;
+  height: 180px;
+  width: 180px;
   background-color: var(--items-color);
   border: 3px solid #acacac;
   border-radius: 50%;
@@ -236,11 +237,11 @@ h4 {
 #studentPerformance {
   width: 100%;
   height: 500px;
-
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   flex-shrink: 1;
+  flex-wrap: wrap;
   flex-direction: row;
 }
 
@@ -248,14 +249,10 @@ h4 {
   height: 100%;
   width: 400px;
   background-color:var(--items-color);
-  border-radius: 20px;
+  border-radius: 15px;
   border: 5px solid #acacac;
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
 }
-
 
 .table{
   font-weight: bold;
@@ -268,4 +265,64 @@ h4 {
 .table td, th{
   border: 3px solid #acacac;
   border-radius: 10px;
+}
+
+#finalResult{
+  padding: 30px;
+}
+/* =================================TeacherArea======================= */
+
+#searchStudent{
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 8px;
+background-color: var(--items-color);
+  border-bottom: 5px solid #acacac;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#searchStudent input, button, select{
+  border: 1px solid #acacac;
+  width: 200px;
+  padding: 10px;
+  margin-left: 2px;
+  margin-right: 2px;
+  border-radius: 10px;
+  font-weight: bold;
+  text-transform: uppercase;
+  outline: none;
+}
+
+#searchStudent button, select{
+  cursor: pointer;
+}
+#searchStudent button:hover{
+ background-color: blue;
+}
+
+#searchStudent button:active{
+  background-color: aqua;
+}
+
+
+#editAndSearch{
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+
+#searchStudentDatas{
+ display: flex;
+ justify-content:center;
+ align-items: center;
+ flex-direction: column;
 }
