--- a/styles/dashboardPages.css
+++ b/styles/dashboardPages.css
@@ -9,13 +9,14 @@
   --items-color:#e0e0e0;
   --background-color: rgb(224, 224, 224);
   --color-letter : black;
-  
+  --items-color2:rgb(138, 131, 180);
 }
 
 .darkMode{
   --background-color: #181818;
   --color-letter : white;
   --items-color:#2b2b2b;
+  --items-color2:darkslateblue;
 }
 
 body {
@@ -73,19 +74,19 @@ input:checked + #labelDarkMode::after {
 /* ======================================button-theme==================================== */
 
 header {
-  background: var(--items-color);
-  box-shadow: 0px 5px 0px #acacac, 0px 0px 0px #ffffff;
+  background: var(--background-color);
+  box-shadow:  0 1rem 3rem rgba(0,0,0,.175);
   width: 100%;
   height: 60px;
   display: flex;
   justify-content: space-between;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
   align-items: center;
   flex-direction: row;
   flex-wrap: nowrap;
   flex-shrink: 1;
-  position:sticky;
+  position:fixed;
   top: 0;
   letter-spacing: 1px;
   font-weight: bold;
@@ -96,7 +97,7 @@ header {
   width: auto;
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   flex-direction: row;
   flex-shrink: 1;
@@ -129,13 +130,13 @@ header {
   align-items: center;
   width: 100px;
   height: 50px;
-  background-color: var(--items-color);
+  background-color: var(--background-color);
   color: var(--color-letter);
   position: absolute;
   top: 58px;
   right: 0px;
-  border-bottom: 2px solid #acacac ;
-  border-radius: 5px;
+  border-bottom: 1px solid #acacac ;
+  border-radius: 0px 0px 10px 10px;
   cursor: pointer;
   user-select: none;
   flex-wrap: nowrap;
@@ -147,11 +148,12 @@ header {
   -webkit-transform: translateY(1px);
   transform: translateY(1px);
   transition: 0.5s;
+  color: #acacac;
 }
 
 .message-exit:active {
-  background-color: #969696;
-  color: #fff;
+  background-color: #212325;
+  color: red;
   transition: 0.1s;
 }
 
@@ -170,19 +172,14 @@ header {
 main {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  text-align: center;
-  flex-wrap: wrap;
+  padding-top: 100px ;
 }
 
 #titleStudent{
   letter-spacing: 5px;
   font-weight: bold;
   text-transform: uppercase;
-  padding-top: 20px;
+  text-align: center;
 }
 
 #initialData {
@@ -230,7 +227,7 @@ main {
   height: 180px;
   width: 180px;
   background-color: var(--items-color);
-  border: 3px solid #acacac;
+  border: 2px solid #acacac;
   border-radius: 50%;
 }
 
@@ -244,6 +241,7 @@ main {
   flex-shrink: 1;
   flex-wrap: wrap;
   flex-direction: row;
+  user-select: none;
 }
 
 #media, #absences, #occurrences, #finalStatistics{
@@ -252,15 +250,25 @@ main {
   background-color:var(--items-color);
   border-radius: 15px;
   border: 5px solid #acacac;
-  text-align: center;
+  overflow-y: auto;
+ overflow-x: hidden;
+}
+
+#media h4, #absences h4, #occurrences h4, #finalStatistics h4, .table h4{
+ font-size: 30px;
+ border-bottom: 2px solid #acacac;
+ padding: 5px;
+ letter-spacing: 3px;
+ text-align: center;
+ background-color: var(--items-color2);
 }
 
 .table{
-  font-weight: bold;
   text-transform:capitalize;
-  text-align: center;
   width: 100%;
   height: 90%;
+  text-align: center;
+  font-weight: bold;
 }
 
 .table td, th{
@@ -268,9 +276,16 @@ main {
   border-radius: 10px;
 }
 
-#finalResult{
-  padding: 30px;
+#absences ul, #occurrences ul{
+  list-style: none;
+  text-align: justify;
+ padding: 20px;
+ 
 }
+#absences li, #occurrences li{
+  border-bottom: 1px solid #acacac;
+}
+
 /* =================================TeacherArea======================= */
 
 #searchStudent{
@@ -282,8 +297,8 @@ main {
   flex-direction: column;
   align-items: center;
   border-radius: 8px;
-background-color: var(--items-color);
-  border-bottom: 5px solid #acacac;
+background: var(--background-color);
+box-shadow:  0 1rem 3rem rgba(0,0,0,.175);
   text-transform: uppercase;
   font-weight: bold;
 
