--- a/styles/dashboardPages.css
+++ b/styles/dashboardPages.css
@@ -9,7 +9,8 @@
   --items-color:#e0e0e0;
   --background-color: rgb(224, 224, 224);
   --color-letter : black;
-  --items-color2:rgb(138, 131, 180);
+  --items-color2:rgb(113, 93, 243);
+  
 }
 
 .darkMode{
@@ -17,6 +18,7 @@
   --color-letter : white;
   --items-color:#2b2b2b;
   --items-color2:darkslateblue;
+  
 }
 
 body {
@@ -91,6 +93,7 @@ header {
   letter-spacing: 1px;
   font-weight: bold;
   user-select: none;
+  z-index: 1000;
 }
 
 #area-user {
@@ -172,7 +175,7 @@ header {
 main {
   width: 100%;
   height: 100%;
-  padding-top: 100px ;
+ 
 }
 
 #titleStudent{
@@ -180,17 +183,20 @@ main {
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
+   padding-top: 100px ;
 }
 
 #initialData {
   width: 100%;
-  height: 200px;
+  height: 500px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
+
 }
+
 #turma {
   height: auto;
   width: auto;
@@ -224,17 +230,18 @@ main {
 
 
 #studentPhoto {
-  height: 180px;
-  width: 180px;
+  height: 200px;
+  width: 200px;
   background-color: var(--items-color);
   border: 2px solid #acacac;
   border-radius: 50%;
 }
 
 
+
 #studentPerformance {
   width: 100%;
-  height: 500px;
+  height: 650px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -242,16 +249,19 @@ main {
   flex-wrap: wrap;
   flex-direction: row;
   user-select: none;
+  padding:20px;
 }
 
 #media, #absences, #occurrences, #finalStatistics{
   height: 100%;
-  width: 400px;
+  width: 700px;
   background-color:var(--items-color);
   border-radius: 15px;
   border: 5px solid #acacac;
   overflow-y: auto;
  overflow-x: hidden;
+ margin-bottom: 20px ;
+ position: relative;
 }
 
 #media h4, #absences h4, #occurrences h4, #finalStatistics h4, .table h4{
@@ -261,6 +271,8 @@ main {
  letter-spacing: 3px;
  text-align: center;
  background-color: var(--items-color2);
+ position: sticky;
+ top: 0;
 }
 
 .table{
@@ -276,6 +288,7 @@ main {
   border-radius: 10px;
 }
 
+
 #absences ul, #occurrences ul{
   list-style: none;
   text-align: justify;
@@ -286,13 +299,31 @@ main {
   border-bottom: 1px solid #acacac;
 }
 
+#addAlert{
+  display: none;
+z-index: 2000;
+position: fixed;
+top: 60px;
+width: 100%;
+height: 50px;
+background-color:rgba(59, 211, 59, 0.5);
+padding: 5px;
+text-align: center;
+font-weight: bold;
+color: rgb(0, 27, 0);
+justify-content: center;
+align-items: center;
+flex-direction: row;
+}
+
+
 /* =================================TeacherArea======================= */
 
 #searchStudent{
   width: 100%;
-  height: 500px;
+  height: 650px;
   display: flex;
-  justify-content: space-around;
+  justify-content:center;
   text-align: center;
   flex-direction: column;
   align-items: center;
@@ -301,7 +332,7 @@ background: var(--background-color);
 box-shadow:  0 1rem 3rem rgba(0,0,0,.175);
   text-transform: uppercase;
   font-weight: bold;
-
+  
 }
 
 #searchStudent input, button, select{
@@ -319,12 +350,31 @@ box-shadow:  0 1rem 3rem rgba(0,0,0,.175);
 #searchStudent button, select{
   cursor: pointer;
 }
-#searchStudent button:hover{
- background-color: blue;
+
+#addGrade, #addAbsences, #addOccurrences{
+  background-color: rgb(0, 201, 0);
+}
+#btnBack{
+  background-color: rgb(252, 78, 78);
+}
+#btnSearchDatas:hover, #btnEditDatas:hover{
+ background-color: var(--items-color2);
+ color: white;
+ transition: 0.5s;
+}
+#btnBack:hover{
+  background-color: rgb(248, 127, 127);
+  transition: 0.5s;
 }
 
-#searchStudent button:active{
-  background-color: aqua;
+#addGrade:hover,#addAbsences:hover,#addOccurrences:hover{
+  background-color: rgb(137, 250, 137);
+  transition: 0.5s;
+}
+ 
+#btnSearchDatas:active,#btnEditDatas:active,#addGrade:active, #addAbsences:active, #addOccurrences:active{
+  background-color: var(--items-color);
+  color: var(--color-letter);
 }
 
 
@@ -343,9 +393,10 @@ box-shadow:  0 1rem 3rem rgba(0,0,0,.175);
   height: auto;
   display: none;
  justify-content:center;
- align-items: center;
+ align-items:flex-start;
  flex-direction: row;
- flex-wrap: wrap;
+ flex-wrap:wrap;
+padding-top: 30px;
 }
 
 .areaEditsDatas{
