--- a/styles/index.css
+++ b/styles/index.css
@@ -15,7 +15,6 @@ body {
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-  position: relative;
 }
 
 #areaLogin {
@@ -100,16 +99,24 @@ p {
 
 /* ========================================registerArea=========================== */
 
-#img-bg-register{
-position: absolute;
-left: 200px;
-display: none;
+#img-bg-register {
+  position: relative;
+  display: none;
+  width: 100vw;
+  height: 100vh;
+}
+
+#img-bg-register img {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
 }
 
 .registerArea {
   position: absolute;
-  top: 180px;
-  right: 200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: none;
   justify-content: space-evenly;
   align-items: center;
@@ -119,10 +126,12 @@ display: none;
   border-radius: 36px;
   background: linear-gradient(45deg, #e6e6e6, #ffffff);
   box-shadow: 5px -5px 0px #e3e3e3, -5px 5px 0px #ffffff;
+  z-index: 1000;
+  flex-shrink: 1;
 }
 
-.registerArea strong{
-  color: purple; 
+.registerArea strong {
+  color: purple;
 }
 .registerArea h1,
 p {
@@ -188,10 +197,9 @@ p {
   color: white;
 }
 
-
 /* ================================Responsividade=============================== */
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1280px) {
   body {
     width: 100vw;
     height: 100vh;
@@ -218,6 +226,10 @@ p {
   #areaLogin button {
     height: 55px;
   }
+
+  #img-bg-register img {
+    padding: 0px;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -238,7 +250,46 @@ p {
     height: 40px;
   }
 
-  #img-background {
+  #img-background img{
+    display: none;
+  }
+
+  .registerArea {
+    width: 90%;
+    height: 500px;
+  }
+
+  .registerArea strong {
+    color: purple;
+  }
+  .registerArea p {
+    font-size: 12px;
+    letter-spacing: 1px;
+  }
+
+  .registerArea h1 {
+    font-size: 20px;
+    letter-spacing: 1px;
+  }
+
+  .registerArea input {
+    padding: 8px;
+  }
+  .registerArea button {
+    height: 30px;
+    width: 50%;
+    letter-spacing: 1px;
+  }
+  .msgError {
+    width: auto;
+    height: auto;
+    color: purple;
+  }
+  .registerArea #voltar {
+    height: 25px;
+    width: 30%;
+  }
+  #img-bg-register img {
     display: none;
   }
 }
