resolvendo bugs nos links e fazendo deploy no netlify

--- a/styles/dashboardPages.css
+++ b/styles/dashboardPages.css
@@ -507,6 +507,19 @@ button {
 /* ================================responsividade================================================= */
 
 
+@media screen and (max-width: 800px){
+  #media,
+  #absences,
+  #occurrences,
+  #finalStatistics {
+    height: 80%;
+    width: 80%;
+  }
+}
+
+
+
+
 
 @media screen and (max-width: 550px){
  
